trying to prevent video titles from getting cut off on iphone

--- a/wp-content/themes/sho_child/css/style.css
+++ b/wp-content/themes/sho_child/css/style.css
@@ -3858,6 +3858,7 @@ height: 430px !important;
 		font-size: 11px;
 		padding-right: 2px;
 		padding-left: 2px;
+        padding-top: 5px;
 		letter-spacing: 1px;
 		line-height: 13px;
 		margin-top: 10px;
